# pymwalib

./: .gitignore  CHANGELOG.md  Dockerfile  MANIFEST  MANIFEST.in  README.md  deploy.txt  setup.cfg  setup.py
.github/workflows/: ci.yml
examples/: README.md  example01.py  example02.py  example03.py  print-context.py  requirements.txt  sum-gpuboxes.py  sum-vcs.py  view_fits.py
pymwalib/: antenna.py  baseline.py  coarse_channel.py  common.py  constants.py  context.py  correlator_context.py  correlator_metadata.py  errors.py  metafits_context.py  metafits_metadata.py  mwalib.py  rfinput.py  timestep.py  version.py  visibility_pol.py  voltage_context.py  voltage_metadata.py
src/pymwalib/: baseline.py  common.py  constants.py  metafits_metadata.py  mwalib.py  version.py
test/: tests.py
tests/: test_correlator_context.py
tools/: make_release.sh  make_release_and_publish.sh  validate.sh
