[metadata]
name = pymwalib
version = 0.14.0
author = Greg Sleap
author_email = greg.sleap@curtin.edu.au
license = 'mpl-2.0'
description = A python wrapper for mwalib to work with raw data from the Murchison Widefield Array (MWA)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MWATelescope/pymwalib
keywords = 
    MWA
    radioastronomy

project_urls =
    Bug Tracker = https://github.com/MWATelescope/pymwalib/issues
classifiers =    
    Development Status :: 4 - Beta  
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Astronomy
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src